   * Improve the part explaining how to make a release of MLV.
   * Correct the document of MLV_wait_input_box. The function take now
     the top-right corner, the width and the height.
   * Remove some french word in the code.
   * Add a small tutorial to use MLV with CMake
 * Image :
   * We add MLV_get_screen() that return the image on the screen.
 * Shape :
   * We implement MLV_draw_triangle(), MLV_draw_filled_triangle(),
     MLV_draw_triangle_on_image() and MLV_draw_filled_traingle_on_image()
     that help user to draw som triangles.
 * Turtle :
   * We implement logo turtles with the MLV_Turtle structure (MLV_turtle.h).
     The MLV turtle is a graphic component inspired from the Logo programming 
     language.
   * We add Leonardo, the MLV mascot. It is the default turtle of MLV.
 * Event :
   * Add MLV_wait_mouse_or_milliseconds()
   * Add MLV_wait_keyboard_or_milliseconds()
   * Add MLV_wait_mouse_or_keyboard_or_milliseconds()
   * Add MLV_wait_event_or_milliseconds()
   * Add MLV_wait_input_box_or_milliseconds()
   * Add MLV_wait_input_box_with_font_or_milliseconds()
   * Add MLV_wait_particular_input_box_or_milliseconds()
   * Add MLV_wait_particular_input_box_or_seconds()
 * Memory leak :
   * We remove memory leak on MLV_remove_list, when we use MLV_wait_input_box(). 
   * We remove memory leak on MLV_data->save_screen when we change the size of 
     the window.
 * Bug :
   * Remove a bug in MLV_draw_pixel and MLV_draw_pixel_on_image. Now image is 
     not toric. 
 * Example :
   * Add example on MLV_draw_triangle()
   * Change MLV_actualise_window by MLV_update_window

mlv-2.0.2
 * Window :
   * We Add the funtion MLV_update_window() because MLV_actualise_windows() is
     not correct english. The function MLV_Actualis_windows() is still present.
 * Documentation :
   * Some small changes in the part explaining how to compile and install MLV.
 * packaging :
   * We simplify the windows cross-compilation scripts to generate window 